Fully implement Reroll Player mod
- Players can now reroll from the death and pause menus
- Rerolling resets the player and some world aspects, and teleports them 1k+ blocks
- Removed Initial Inventory due to no longer needing
- Waiting on some fixes and features

--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -22,6 +22,24 @@ reroll {
     # You can use most valid commands. '@p' will replace wil the player's name. You can also use format strings. Examples: 'say hello world', 'advancement revoke @p everything', 'say hello %s, you are %s!;playername;amazing' [default: [advancement revoke @p everything]]
     S:"Additional Commands" <
         advancement revoke @p everything
+        es_advancement @p retries set 0
+        es_advancement @p level set 1
+        es_skill @p reset
+        es_cooldown @p reset
+        es_endurance @p reset
+        gamestage @p clear
+        srpevolution phase_0
+        ctrlkill all -1
+        ctrlkill all 5
+        ctrlkill all 10
+        ctrlkill all 0
+        scoreboard objectives remove timerbonus1
+        scoreboard objectives remove timerbonus2
+        scoreboard objectives remove newtimer
+        scoreboard objectives add timerbonus1 dummy
+        scoreboard objectives add timerbonus2 dummy
+        scoreboard players set Fake_Player timerbonus2 2
+        scoreboard objectives add newtimer dummy
      >
 
     # Sets the resource location for the block you can spawn on. [default: [minecraft:grass], [minecraft:dirt], [minecraft:stone]]
@@ -30,22 +48,22 @@ reroll {
      >
 
     # Should players get an initial inventory when they first join a world? [default: true]
-    B:"Initial Inventory"=false
+    B:"Initial Inventory"=true
 
     # Should players get an initial inventory every time they reroll? [default: true]
     B:"Initial Inventory per Reroll"=true
 
     # This is a safety feature to lock the use of reroll at the start. Users are required to use /reroll unlock to use reroll just in case. [default: true]
-    B:"Lock Reroll"=true
+    B:"Lock Reroll"=false
 
     # Maximum number of times to try to find a valid block position for reroll. Rerolling again will reset the count and start from the next reroll position. [range: 1 ~ 10, default: 5]
-    I:"Max Tries"=3
+    I:"Max Tries"=10
 
     # Override the dimension used for the reroll spawn location [range: -2147483648 ~ 2147483647, default: 0]
     I:"Override Dimension"=-1
 
     # Using Reroll requires Reroll Dice. Disables the /reroll command for non-OP players. [default: true]
-    B:"Require Dice"=true
+    B:"Require Dice"=false
 
     # Should '/reroll all' send all players to the same location? [default: false]
     B:"Reroll All Together"=false
@@ -60,11 +78,17 @@ reroll {
     # You can add any existing item per line like this: "minecraft:torch;16".
     # Note that you can only have as many items as there are inventory slots. [default: [reroll:dice;1]]
     S:"Reroll Inventory" <
-        
+        nethercraft:glowood_sword;1
+        nethercraft:pyridium_pickaxe;1
+        timeisup:timer_bonus;1
+        nethercraft:glowood_axe;1
+        nethercraft:glowood_shovel;1
+        minecraft:torch;1
+        enderskills:book;1
      >
 
     # Determines the minimum distance to teleport when you reroll. [range: 256 ~ 10240, default: 512]
-    I:"Reroll Minimum Distance"=512
+    I:"Reroll Minimum Distance"=1024
 
     # Reroll players if they die to simulate a hardcore experience. [default: false]
     B:"Reroll On Death [Hardcore Mode]"=false
