Fix gamestage commands for reroll

--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -27,7 +27,10 @@ reroll {
         es_skill @p reset
         es_cooldown @p reset
         es_endurance @p reset
-        gamestage @p clear
+        gamestage silentremove @p nether
+        gamestage silentremove @p erebus
+        gamestage silentremove @p deepdark
+        gamestage silentremove @p surface
         srpevolution phase_0
         ctrlkill all -1
         ctrlkill all 5
