set init inventory back to normal

--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -82,8 +82,7 @@ reroll {
     # Note that you can only have as many items as there are inventory slots. [default: [reroll:dice;1]]
     S:"Reroll Inventory" <
         nethercraft:glowood_sword;1
-        nethercraft:pyridium_pickaxe;1
-        timeisup:timer_bonus;1
+        nethercraft:glowood_pickaxe;1
         nethercraft:glowood_axe;1
         nethercraft:glowood_shovel;1
         minecraft:torch;1
