Ghast bones rework
- Bone blocks no longer drop themselves
- Ghast bones drop from bone blocks 25% of the time
- Added a new tool: Quartz Pickaxe
- Very fast mining speed, extremely low durability, mining level = 0
- When mining ghast bones with the Quartz Pickaxe, 2 ghast bones drop 100% of the time

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -86,6 +86,7 @@ definitions {
         %Medkit
         contenttweaker:scrambled_magma_eggs
         contenttweaker:deviled_egg_sandwich
+        simpleores:tin_pickaxe
      >
 
     #  [default: ]
