disable unused primitive mobs

--- a/config/primitivemobs/primitivemobs.cfg
+++ b/config/primitivemobs/primitivemobs.cfg
@@ -14,70 +14,70 @@
     B:"Enable Blazing Juggernaut"=true
 
     # Enable/Disable the Brain Slime
-    B:"Enable Brain Slime"=true
+    B:"Enable Brain Slime"=false
 
     # Enable/Disable the Chameleon
-    B:"Enable Chameleon"=true
+    B:"Enable Chameleon"=false
 
     # Enable/Disable the Dodo
-    B:"Enable Dodo"=true
+    B:"Enable Dodo"=false
 
     # Enable/Disable the Festive Creeper
     B:"Enable Festive Creeper"=true
 
     # Enable/Disable the Filch Lizard
-    B:"Enable Filch Lizard"=true
+    B:"Enable Filch Lizard"=false
 
     # Enable/Disable the Flame Spewer
     B:"Enable Flame Spewer"=true
 
     # Enable/Disable the Goblin
-    B:"Enable Goblin"=true
+    B:"Enable Goblin"=false
 
     # Enable/Disable the Grove Sprite
-    B:"Enable Grove Sprite"=true
+    B:"Enable Grove Sprite"=false
 
     # Enable/Disable the Harpy
-    B:"Enable Harpy"=true
+    B:"Enable Harpy"=false
 
     # Enable/Disable the Haunted Tool
-    B:"Enable Haunted Tool"=true
+    B:"Enable Haunted Tool"=false
 
     # Enable/Disable the Lily lurker
     B:"Enable Lily Lurker"=false
 
     # Enable/Disable the Lost Miner
-    B:"Enable Lost Miner"=true
+    B:"Enable Lost Miner"=false
 
     # Enable/Disable the Mimic
-    B:"Enable Mimic"=true
+    B:"Enable Mimic"=false
 
     # Enable/Disable the Rocket Creeper
-    B:"Enable Rocket Creeper"=true
+    B:"Enable Rocket Creeper"=false
 
     # Enable/Disable the Sheepman
     B:"Enable Sheepman"=false
 
     # Enable/Disable the Skeleton Warrior
-    B:"Enable Skeleton Warrior"=true
+    B:"Enable Skeleton Warrior"=false
 
     # Enable/Disable the Spider Family
     B:"Enable Spider Family"=false
 
     # Enable/Disable the Support Creeper
-    B:"Enable Support Creeper"=true
+    B:"Enable Support Creeper"=false
 
     # Enable/Disable the Traveling Merchant
-    B:"Enable Traveling Merchant"=true
+    B:"Enable Traveling Merchant"=false
 
     # Enable/Disable the Treasure Slime
-    B:"Enable Treasure Slime"=true
+    B:"Enable Treasure Slime"=false
 
     # Enable/Disable the Troll
     B:"Enable Troll"=false
 
     # Enable/Disable the Void Eye
-    B:"Enable Void Eye"=true
+    B:"Enable Void Eye"=false
 }
 
 
