implement new surface barrier + TP, trees now spawn

--- a/config/BiomeTweaker/scripts/BTscript.cfg
+++ b/config/BiomeTweaker/scripts/BTscript.cfg
@@ -17,3 +17,22 @@ biomeBeach.registerGenBiomeRep(4)
 
 allBiomes.removeOre("DIAMOND")
 allBiomes.removeOre("COAL")
+
+
+Tweaker.setScriptStage("POST_DECORATE")
+Tweaker.setWorld(0)
+toBarrier = newBlockReplacement()
+toBarrier.set("block", "erebus:force_field")
+toBarrier.set("maxY", 256)
+toBarrier.set("minY", 254)
+allBiomes.registerGenBlockRep("minecraft:air", toBarrier)
+
+
+Tweaker.setScriptStage("POST_DECORATE")
+Tweaker.setWorld(1)
+toBarrier = newBlockReplacement()
+toBarrier.set("block", "erebus:force_field")
+toBarrier.set("maxY", 10)
+toBarrier.set("minY", 8)
+
+allBiomes.registerGenBlockRep("minecraft:air", toBarrier)
