--- a/config/RTG/biomes/minecraft/frozen_river.cfg
+++ b/config/RTG/biomes/minecraft/frozen_river.cfg
@@ -16,7 +16,7 @@ decorations {
     # If TRUE, RTG decorations will disabled in this biome and only vanilla decorations will generate.
     # RTG decorations include custom trees, shrubs, boulders, etc.
     #  [default: false]
-    B:"Disable RTG Decorations"=false
+    B:"Disable RTG Decorations"=true
 
     trees {
         # This setting allows you to alter the amount of RTG trees that generate in this biome.
@@ -35,7 +35,7 @@ surfaces {
     # If TRUE, RTG surfaces will be disabled in this biome and only vanilla surfaces will be used.
     # RTG surfaces include custom top & filler blocks, and 'mix' blocks like podzol in Forests.
     #  [default: false]
-    B:"Disable RTG Surfaces"=false
+    B:"Disable RTG Surfaces"=true
 
     "top block" {
         # Set this to change this biome's top block.
