--- a/config/tool_progression/block_overwrites.cfg
+++ b/config/tool_progression/block_overwrites.cfg
@@ -60,7 +60,7 @@ block {
     S:"quark:biome_cobblestone:*"=pickaxe=6
     S:"quark:slate:*"=pickaxe=6
 
-    
+    S:"erebus:forcefield:*"=pickaxe=9999
     
 }
 
