Beneath horror changes ;)
- Changed Eyes in the Darkness sounds to be proper scary
- Changed "Shadow" texture to blend in with the darkness more...
- Removed variant creepers and made the base texture blend in with deep stone
- Reduced skeleton follow range and reduced distance attack range in general
- Reduced skeleton spawn rate in the deep dark
- disabled creeper napalm (too much light in the deep dark)
- Significantly reduced diamond spawn rate

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -31,7 +31,7 @@ attributes {
         zombie_pigman;generic.followRange;0;30
         zombie_villager;generic.followRange;0;30
         husk;generic.followRange;0;30
-        skeleton;generic.followRange;0;30
+        skeleton;generic.followRange;0;20
         stray;generic.followRange;0;30
         wither_skeleton;generic.followRange;0;30
         creeper;generic.followRange;0;30
@@ -48,7 +48,6 @@ attributes {
         zombie_villager;generic.knockbackResistance;0;0.5
         husk;generic.knockbackResistance;0;0.5
         vindication_illager;generic.knockbackResistance;0;0.5
-        creeper;generic.movementSpeed;1;0.5
         slime;generic.movementSpeed;1;0.5
         magma_cube;generic.movementSpeed;1;0.01
         nethercraft:dark_zombie;generic.maxHealth;0;-35;/;0
@@ -62,6 +61,7 @@ attributes {
         primitivemobs:blazing_juggernaut;generic.attackDamage;0;1
         primitivemobs:blazing_juggernaut;generic.followRange;0;-15
 
+        eyesinthedarkness:eyes;generic.movementSpeed;1;0.5
         grue:entitygrue;generic.followRange;0;60
      >
 }
