Many deep dark changes
- Add yungs caves
- Remove lava completely
- enable grue
- increase shadow spawn rate
- decrease diamond spawn further

--- a/config/beneath/beneath.cfg
+++ b/config/beneath/beneath.cfg
@@ -62,17 +62,17 @@ general {
 
     # The chance that a lake generates in The Beneath (same logic as the vanilla setting). Setting it to 0 stops lake generation
     # [range: 0 ~ 100, default: 10]
-    I:"Lake spawn chance"=1
+    I:"Lake spawn chance"=0
 
     # What mode The Beneath is set to. Current modes are:
     # grue: Grues spawn in the darkness
     # darkness: You take damage while in dark areas.
     # none: Disables darkness damage
     # §c[Minecraft Restart Required]§r
-    S:Mode=none
+    S:Mode=grue
 
     # Toggles whether or not other mods should be able to interfere with the terrain generation of The Beneath.
-    B:"Other Mod World Generation"=false
+    B:"Other Mod World Generation"=true
 
     # Changes the red part of the Beneath sky color while affected by Night Vision. Client side only.
     # [range: 0.0 ~ 10.0, default: 1.1]
@@ -83,7 +83,7 @@ general {
 
     # Spawn Weight for the shadows, increase to increase the chance of them spawning, or decrease to decrease the chance of them spawning.
     # [range: 10 ~ 100, default: 50]
-    I:"Shadow Spawn Weight"=50
+    I:"Shadow Spawn Weight"=65
 
     # The chance that a stalactite generates in The Beneath (higher number increases the chance, lower decreases it). Setting it to 0 stops stalactite generation\n[range: 0 ~ 100, default: 20]
     I:"Stalactite spawn chance"=20
