--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -110,6 +110,7 @@ definitions {
         %Delta
         @srparasites
         minecraft:stone
+        minecraft:cobblestone
      >
 
     #  [default: ]
