hide lots of items from jei

--- a/config/jei/itemBlacklist.cfg
+++ b/config/jei/itemBlacklist.cfg
@@ -9,13 +9,126 @@
 ##########################################################################################################
 
 advanced {
-    # List of ingredients that should not be displayed in the list. Format: modId[:name[:meta]]. Hide Ingredients Mode will automatically add or remove entries here. [Default: []]
     S:itemBlacklist <
-        nethercraft:imp_helmet
-        nethercraft:imp_chestplate
+        cyclicmagic:ender_lightning
+        simpleores:mythril_sword
+        cyclicmagic:solidifier
+        cyclicmagic:netherbrick_spade
+        cyclicmagic:sprout
+        cyclicmagic:wand_missile
+        cyclicmagic:tool_harvest_weeds
+        nethercraft:netherrack_bow
+        cyclicmagic:slingshot_weapon
+        simpleores:adamantium_chestplate
+        cyclicmagic:ender_tnt_6
+        cyclicmagic:charm_wing
+        cyclicmagic:ender_tnt_2
+        cyclicmagic:moon_sensor
+        cyclicmagic:ender_tnt_3
+        cyclicmagic:plate_vector
+        cyclicmagic:ender_tnt_4
+        cyclicmagic:ender_tnt_5
+        cyclicmagic:boomerang
+        cyclicmagic:ender_eye_orb
+        cyclicmagic:mattock
+        simpleores:mythril_chestplate
         nethercraft:imp_leggings
+        simpleores:onyx_sword
+        cyclicmagic:glowing_chorus
+        cyclicmagic:card_location
+        cyclicmagic:block_fragile_weak
+        cyclicmagic:ender_tnt_1
+        cyclicmagic:builder_pattern
+        simpleores:adamantium_shears
+        cyclicmagic:melter
+        simpleores:mythril_pickaxe
+        cyclicmagic:sandstone_axe
+        simpleores:tin_chestplate
+        simpleores:tin_leggings
+        cyclicmagic:block_fragile
+        cyclicmagic:tool_prospector
+        simpleores:adamantium_shovel
+        cyclicmagic:spikes_diamond
+        cyclicmagic:netherbrick_pickaxe
+        cyclicmagic:soulstone
+        cyclicmagic:inventory_food
+        cyclicmagic:corrupted_chorus
+        simpleores:adamantium_helmet
+        cyclicmagic:block_shears
+        cyclicmagic:tool_warp_home
+        simpleores:onyx_bow
+        simpleores:adamantium_sword
+        simpleores:mythril_helmet
+        simpleores:adamantium_leggings
+        cyclicmagic:charm_fire
+        nethercraft:imp_chestplate
+        simpleores:tin_boots
+        cyclicmagic:sandstone_pickaxe
+        cyclicmagic:sword_weakness
+        cyclicmagic:tool_push
+        simpleores:adamantium_pickaxe
+        cyclicmagic:water_candle
+        simpleores:copper_shears
+        cyclicmagic:glove_climb
+        simpleores:mythril_axe
+        cyclicmagic:shears_obsidian
+        simpleores:tin_helmet
+        cyclicmagic:block_fragile_auto
+        simpleores:mythril_shovel
+        cyclicmagic:magnet_anti_block
+        simpleores:onyx_chestplate
+        cyclicmagic:stone_pebble
+        simpleores:tin_axe
+        cyclicmagic:ender_fishing
+        cyclicmagic:clock
+        nethercraft:imp_helmet
+        cyclicmagic:charm_void
+        simpleores:mythril_shears
+        simpleores:adamantium_boots
+        cyclicmagic:tool_mount
+        cyclicmagic:sword_ender
+        cyclicmagic:sandstone_spade
+        cyclicmagic:chest_sack_empty
+        simpleores:onyx_axe
+        cyclicmagic:wand_hypno
+        simpleores:tin_sword
+        cyclicmagic:food_step
+        simpleores:adamantium_axe
+        cyclicmagic:evoker_fang
+        simpleores:onyx_leggings
+        simpleores:onyx_helmet
+        srparasites:weapon_bow_sentient
+        simpleores:onyx_shears
+        cyclicmagic:sword_slowness
+        simpleores:mythril_boots
+        cyclicmagic:chest_sack
+        cyclicmagic:crafting_food
+        simpleores:onyx_pickaxe
+        simpleores:mythril_bow
+        cyclicmagic:storage_bag
+        cyclicmagic:dice
+        cyclicmagic:apple
+        cyclicmagic:tool_warp_spawn
+        simpleores:onyx_shovel
+        cyclicmagic:spikes_iron
+        cyclicmagic:imbuer
+        cyclicmagic:button_large
+        cyclicmagic:netherbrick_axe
+        nethercraft:dark_wheat
+        cyclicmagic:sprout_seed
+        simpleores:onyx_boots
         nethercraft:imp_boots
         nethercraft:imp_skin
+        simpleores:mythril_leggings
+        cyclicmagic:tool_spelunker
+        cyclicmagic:cyclic_wand_build
+        cyclicmagic:charm_water
+        cyclicmagic:charm_speed
+        cyclicmagic:tool_mount_inverse
+        simpleores:tin_shovel
+        cyclicmagic:charm_antidote
+        simpleores:tin_shears
+        cyclicmagic:sandstone_sword
      >
 }
 
