Add AdvFinders, Pyridium Finder, new neridium recipe, rework nether chest loot

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -87,6 +87,7 @@ definitions {
         contenttweaker:scrambled_magma_eggs
         contenttweaker:deviled_egg_sandwich
         simpleores:tin_pickaxe
+        adfinders:metals_finder
      >
 
     #  [default: ]
