--- a/config/beneath/beneath.cfg
+++ b/config/beneath/beneath.cfg
@@ -69,7 +69,7 @@ general {
     # darkness: You take damage while in dark areas.
     # none: Disables darkness damage
     # §c[Minecraft Restart Required]§r
-    S:Mode=grue
+    S:Mode=none
 
     # Toggles whether or not other mods should be able to interfere with the terrain generation of The Beneath.
     B:"Other Mod World Generation"=true
