give blazing juggs 100% knockback resistance muhahahaha

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -60,6 +60,7 @@ attributes {
         ghast;generic.maxHealth;0;-5;/;0
         primitivemobs:blazing_juggernaut;generic.attackDamage;0;1
         primitivemobs:blazing_juggernaut;generic.followRange;0;-15
+        primitivemobs:blazing_juggernaut;generic.knockbackResistance;0;1.0
 
         eyesinthedarkness:eyes;generic.movementSpeed;1;0.5
         grue:entitygrue;generic.followRange;0;60
