deep dark zombies now use diamond gear

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -1136,21 +1136,25 @@ zombieequipment {
     # Boots which can be worn by a zombie in their boots slot [default: [leather_boots;3;0], [chainmail_boots;2], [golden_boots;1], [iron_boots;4;-1]]
     S:zombieEquipmentBoots <
         nethercraft:neridium_boots;10;-1
+        minecraft:diamond_boots;10;10
      >
 
     # Chestplates which can be worn by a zombie in their chestplate slot [default: [leather_chestplate;3;0], [chainmail_chestplate;2], [golden_chestplate;1], [iron_chestplate;4;-1]]
     S:zombieEquipmentChestplate <
         nethercraft:neridium_chestplate;10;-1
+        minecraft:diamond_chestplate;10;10
      >
 
     # Helmets which can be worn by a zombie in their helmet slot [default: [leather_helmet;3;0], [chainmail_helmet;2], [golden_helmet;1], [iron_helmet;4;-1]]
     S:zombieEquipmentHelmet <
         nethercraft:neridium_helmet;10;-1
+        minecraft:diamond_helmet;10;10
      >
 
     # Leggings which can be worn by a zombie in their leggings slot [default: [leather_leggings;3;0], [chainmail_leggings;2], [golden_leggings;1], [iron_leggings;4;-1]]
     S:zombieEquipmentLeggings <
        nethercraft:neridium_leggings;10;-1
+       minecraft:diamond_leggings;10;10
      >
 
     # Items which can be wielded by a zombie in their mainhand [default: [wooden_axe;3;0], [wooden_sword;3;0], [stone_pickaxe;2], [stone_axe;2], [stone_sword;2], [iron_pickaxe;1], [golden_sword;1], [golden_axe;1], [iron_axe;3;-1], [iron_sword;3;-1]]
@@ -1159,6 +1163,8 @@ zombieequipment {
       nethercraft:neridium_sword;3;-1
       nethercraft:glowood_pickaxe;5;-1
       nethercraft:neridium_pickaxe;2;-1
+      minecraft:diamond_pickaxe;2;10
+      minecraft:diamond_sword;3;10
      >
 
     # Items which can be wielded by a zombie in their offhand [default: [wooden_axe;3;0], [wooden_sword;3;0], [stone_pickaxe;2], [stone_axe;2], [stone_sword;2], [iron_pickaxe;1], [golden_sword;1], [golden_axe;1], [shield;5], [iron_axe;3;-1], [iron_sword;3;-1]]
@@ -1167,6 +1173,8 @@ zombieequipment {
       nethercraft:neridium_sword;3;-1
       nethercraft:glowood_pickaxe;5;-1
       nethercraft:neridium_pickaxe;2;-1
+      minecraft:diamond_pickaxe;2;10
+      minecraft:diamond_sword;3;10
      >
 
     # Enchantments which can be applied to mainhand and offhand items [default: [sharpness;4], [knockback;2], [smite;2], [bane_of_arthropods;2], [looting;1], [sweeping;1], [fire_aspect;5;-1]]
