Fix reset after timer up, add 5s to time on reset

--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -21,6 +21,7 @@ compat {
 reroll {
     # You can use most valid commands. '@p' will replace wil the player's name. You can also use format strings. Examples: 'say hello world', 'advancement revoke @p everything', 'say hello %s, you are %s!;playername;amazing' [default: [advancement revoke @p everything]]
     S:"Additional Commands" <
+        gamemode survival @p
         advancement revoke @p everything
         es_advancement @p retries set 0
         es_advancement @p level set 1
@@ -43,6 +44,7 @@ reroll {
         scoreboard objectives add timerbonus2 dummy
         scoreboard players set Fake_Player timerbonus2 2
         scoreboard objectives add newtimer dummy
+        timer @p add 100
      >
 
     # Sets the resource location for the block you can spawn on. [default: [minecraft:grass], [minecraft:dirt], [minecraft:stone]]
