Remove vanilla mushrooms from the nether

--- a/config/BiomeTweaker/scripts/BTscript.cfg
+++ b/config/BiomeTweaker/scripts/BTscript.cfg
@@ -36,3 +36,7 @@ toBarrier.set("maxY", 10)
 toBarrier.set("minY", 8)
 
 allBiomes.registerGenBlockRep("minecraft:air", toBarrier)
+
+
+Tweaker.setWorld(-1)
+allBiomes.removeDecoration("SHROOM")
