mob balance tweaks

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -61,7 +61,11 @@ attributes {
         primitivemobs:blazing_juggernaut;generic.attackDamage;0;1
         primitivemobs:blazing_juggernaut;generic.followRange;0;-15
         primitivemobs:blazing_juggernaut;generic.knockbackResistance;0;1.0
+        nethercraft:bloody_zombie;generic.movementSpeed;1;0.3
+        nethercraft:dark_zombie;generic.movementSpeed;1;0.2
 
+        minecraft:zombie;generic.movementSpeed;1;0.3
+        
         eyesinthedarkness:eyes;generic.movementSpeed;1;0.5
         grue:entitygrue;generic.followRange;0;60
      >
