Add Essential mod, GUI tweaks, remove unneeded/conflicting keybinds

--- a/config/globalgamerules.cfg
+++ b/config/globalgamerules.cfg
@@ -75,6 +75,9 @@ gamerules {
     B:naturalRegeneration=true
 
     # GameRule added by another mod or from commands
+    S:pvp=false
+
+    # GameRule added by another mod or from commands
     S:quark_allowDropoff=true
 
     # How often a random block tick occurs (such as plant growth, leaf decay, etc.) per chunk section per game tick. 0 will disable random
