--- a/config/UniversalTweaks.cfg
+++ b/config/UniversalTweaks.cfg
@@ -43,6 +43,9 @@ general {
     }
 
     "bugfixes: entities" {
+        # Prevents fire projectiles burning entities when blocking with shields
+        B:"Block Fire"=true
+
         # Fixes entities glitching through the bottom of boats
         B:"Boat Riding Offset"=true
 
@@ -58,11 +61,17 @@ general {
         # Fixes item dupes when players are dropping items and disconnecting
         B:"Disconnect Dupe"=true
 
+        # Fixes consuming an item having a chance of also consuming a second item without any animation
+        B:"Double Consumption"=true
+
         # Saves entity bounding boxes to tags to prevent breakouts and suffocation
         B:"Entity Bounding Box"=true
 
         # Fixes entity motion desyncs most notable with arrows and thrown items
         B:"Entity Desync"=true
+
+        # Fixes non-functional elytra firework boosting and guardian targeting if the entity ID is 0
+        B:"Entity ID"=true
 
         # Prevents corruption of entities caused by invalid health or damage values
         B:"Entity NaN Values"=true
@@ -76,7 +85,7 @@ general {
         # Changes UUIDs of loaded entities in case their UUIDs are already assigned (and removes log spam)
         B:"Entity UUID"=true
 
-        # Saves increased player health to tags
+        # Corrects maximum player health on joining by setting the last saved health value
         B:"Max Player Health"=true
 
         # Fixes saturation depleting in peaceful mode
@@ -90,16 +99,13 @@ general {
     }
 
     "bugfixes: misc" {
-        # Prevents fire projectiles burning entities when blocking with shields
+        # Improves the accuracy of smooth lighting by checking for suffocation and light opacity
+        B:"Accurate Smooth Lighting"=true
         B:"Block Fire"=true
 
         # Fixes entity and particle rendering issues by enabling depth buffer writing
         B:"Depth Mask"=true
-
-        # Fixes slow background startup edge case caused by checking tooltips during the loading process
         B:"Faster Background Startup"=true
-
-        # Fixes invisible chunks in edge cases (small enclosed rooms at chunk borders)
         B:"Frustum Culling"=true
 
         # Replaces the help command, sorts and reports broken commands
@@ -128,6 +134,9 @@ general {
     "bugfixes: world" {
         # Fixes loading of outdated chunks to prevent duplications, deletions and data corruption
         B:"Chunk Saving"=true
+
+        # Fixes invisible chunks in edge cases (small enclosed rooms at chunk borders)
+        B:"Frustum Culling"=true
 
         # Keeps the order of tile entities on chunk load
         B:"Tile Entity Update Order"=true
@@ -194,6 +203,9 @@ general {
 
             # Disables damage caused by bees bypassing player armor
             B:"Disable Bee Damage Armor Bypass"=true
+
+            # Allows Forestry farms to pick up ExtraTrees fruit
+            B:"Extra Trees: Gather Windfall"=true
         }
 
         "mo' creatures" {
@@ -226,6 +238,9 @@ general {
             # Adds particles to firebats similar to legacy versions
             B:"Firebat Particles"=true
 
+            # Fixes the bounding box always being at the center in both cinderpearls and shimmerleafs
+            B:"Flower Bounding Box"=true
+
             # Stops the thaumometer from bobbing rapidly when using it to scan objects
             B:"Stable Thaumometer"=true
 
@@ -247,6 +262,27 @@ general {
             B:"Projectile Despawning"=true
         }
 
+        roost {
+            # Improves load time by registering CT chickens early for Roost to detect them
+            # Note: All CT chickens must be specified in "Custom Chickens" for this tweak to work!
+            # Note: The .zs files creating custom chickens must be loaded with '#loader preinit', not '#loader contenttweaker'!
+            B:"ContentTweaker: Early Register CT Chickens"=true
+
+            # Adds custom chickens from mods (e.g. ContentTweaker) to Roost's stock texture check
+            # Syntax: name
+            # name     Chicken name
+            S:"Custom Chickens" <
+             >
+        }
+
+        "thermal expansion" {
+            # Adds Monoculture Cycle integration to desired phytogenic insolator recipes added by ModTweaker
+            # Register the recipe with Insolator.addRecipeMonoculture() instead of Insolator.addRecipe() in .zs files
+            # (and Insolator.addRecipeMonocultureSaplingInfuser() instead of Insolator.addRecipeSaplingInfuser())
+            # Note: Make sure the 'fertilizer' is specified as the secondaryInput arg in the function
+            B:"Insolator Custom Monoculture"=true
+        }
+
     }
 
     "tweaks: blocks" {
@@ -264,9 +300,10 @@ general {
 
         # Allows the player to jump over fences and walls
         B:"Fence/Wall Jump"=true
-
-        # Prevents placing of liquid source blocks in the world
         B:"Hardcore Buckets"=false
+
+        # Allows the creation of grass paths everywhere (beneath fence gates, trapdoors, ...)
+        B:"Lenient Paths"=true
 
         # Determines how tall sugar cane can grow
         I:"Sugar Cane Size"=3
@@ -283,11 +320,27 @@ general {
         }
 
         "breakable bedrock" {
+            # Allows dispensers to place blocks
+            B:"[1] Block Dispenser Toggle"=true
+
             # Allows customizable mining of bedrock
             B:"[1] Breakable Bedrock Toggle"=false
 
+            # List of blocks concerning dispensing
+            # Behavior depends on the list mode
+            # Syntax: modid:block
+            S:"[2] Block List" <
+                minecraft:water
+                minecraft:flowing_water
+                minecraft:lava
+                minecraft:flowing_lava
+                minecraft:fire
+                minecraft:web
+                thermalexpansion:strongbox
+             >
+
             # List of tools concerning mining bedrock
-            # If empty, allows every tool to be used
+            # Behavior depends on the list mode
             # Syntax: modid:tool
             S:"[2] Tool List" <
              >
@@ -329,7 +382,17 @@ general {
         # Enables ignition of entities by right-clicking instead of awkwardly lighting the block under them
         B:"Better Ignition"=true
 
-        # Replaces deadly creeper explosions with delightful confetti
+        # Sets the acceleration value for controlling boats
+        D:"Boat Speed"=0.04
+
+        # Sets the chance for creepers to spawn charged
+        # Min: 0.0
+        # Max: 1.0
+        D:"Charged Creeper Spawning Chance"=0.0
+
+        # Sets the chance to replace deadly creeper explosions with delightful confetti
+        # Min: 0.0
+        # Max: 1.0
         B:"Creeper Confetti"=false
 
         # Disables skipping night by using a bed while making it still able to set spawn
@@ -379,7 +442,7 @@ general {
             # Prevents the fire animation overlay from being displayed when the player is immune to fire
             B:"[3] Fire Overlay"=true
 
-            # Allows skeletons to shoot flaming arrows when on fire (30% chance * regional difficulty
+            # Allows skeletons to shoot flaming arrows when on fire (30% chance * regional difficulty)
             B:"[4] Flaming Arrows"=true
 
             # Allows fire to spread from entity to entity (30% chance * regional difficulty)
@@ -445,6 +508,21 @@ general {
             D:"[2] Damage Reduction"=2.0
         }
 
+        "rally health" {
+            # Adds Bloodborne's Rally system to Minecraft
+            # Regain lost health when attacking back within the risk time
+            B:"[1] Rally Health Toggle"=false
+
+            # Determines the risk time in ticks
+            I:"[2] Risk Time"=60
+
+            # Determines the chance to regain health in percent
+            I:"[3] Heal Chance"=80
+
+            # Plays an indication sound effect when health is regained
+            B:"[4] Indication Sound"=false
+        }
+
     }
 
     "tweaks: items" {
@@ -454,8 +532,22 @@ general {
         # Bows enchanted with Infinity no longer require arrows
         B:"Bow Infinity"=true
 
+        # Sets custom rarities for items, affecting tooltip colors
+        # Syntax: modid:item;rarity
+        # Available rarities: common, uncommon, rare, epic
+        # Example -> minecraft:diamond;rare
+        S:"Custom Rarity" <
+            
+         >
+
+        # Prevents placing of liquid source blocks in the world
+        B:"Hardcore Buckets"=false
+
         # Disables the 1.9 combat update attack cooldown
         B:"No Attack Cooldown"=false
+
+        # Disables dragon's breath from being a container item and leaving off empty bottles when a stack is brewed with
+        B:"No Leftover Breath Bottles"=true
 
         # Enables one-time ignition of entities by hitting them with a torch
         B:"Super Hot Torch"=false
@@ -510,6 +602,15 @@ general {
 
             # Enables the bobbing effect
             B:"[13] Bobbing"=true
+
+            # Makes item entities flash when they're about to despawn
+            B:"[14] Clear Despawn"=true
+
+            # Determines the time in seconds item entities have left before despawn to start flashing
+            I:"[15] Clear Despawn: Flashing Time"=20
+
+            # Makes item entities flash faster as they get closer to despawning
+            B:"[16] Clear Despawn: Urgent Flashing"=true
         }
 
         mending {
@@ -571,7 +672,7 @@ general {
         # 0 for vanilla default
         I:"Linear XP Amount"=0
 
-        # Disables the flashing of skybox and ground brightness on lightning strikes
+        # Disables the flashing of skybox and ground brightness on lightningflash strikes
         B:"No Lightning Flash"=false
 
         # Disables the flashing effect when the night vision potion effect is about to run out
@@ -579,8 +680,6 @@ general {
 
         # Disables the inventory shift when potion effects are active
         B:"No Potion Shift"=true
-
-        # Disables lighting of active redstone, repeaters, and comparators to improve performance
         B:"No Redstone Lighting"=false
 
         # Prevents placing offhand blocks when blocks or food are held in the mainhand
@@ -597,14 +696,10 @@ general {
 
         # Skips the credits screen after the player goes through the end podium portal
         B:"Skip Credits"=false
-
-        # Suppresses in-game tutorial hint tabs in the right-hand corner
         B:"Suppress Tutorial Hints"=true
 
         # Adds a button to the pause menu to toggle cheats
         B:"Toggle Cheats Button"=false
-
-        # Removes the hardcoded 30 FPS limit in screens like the main menu
         B:"Uncap FPS"=true
 
         "incurable potions" {
@@ -646,17 +741,9 @@ general {
         }
 
         "rally health" {
-            # Adds Bloodborne's Rally system to Minecraft
-            # Regain lost health when attacking back within the risk time
             B:"[1] Rally Health Toggle"=false
-
-            # Determines the risk time in ticks
             I:"[2] Risk Time"=60
-
-            # Determines the chance to regain health in percent
             I:"[3] Heal Chance"=80
-
-            # Plays an indication sound effect when health is regained
             B:"[4] Indication Sound"=false
         }
 
@@ -683,6 +770,93 @@ general {
              >
         }
 
+        "pickup notification" {
+            # Displays notifications when the player obtains or loses items
+            B:"[01] Pickup Notification Toggle"=true
+
+            # Displays item additions when a player obtains an item
+            B:"[02] Display Item Additions"=true
+
+            # Displays item removals when a player loses an item
+            B:"[03] Display Item Removals"=true
+
+            # Displays changes in player experience
+            B:"[04] Display Experience"=true
+
+            # Displays the icon of the respective item
+            B:"[05] Display Icon"=true
+
+            # Displays the name of the respective item
+            B:"[06] Display Name"=true
+
+            # Displays a dark rectangle behind changed items
+            B:"[07] Display Background"=false
+
+            # Sets the horizontal offset of the notification
+            I:"[08] Display Offset Horizontal"=0
+
+            # Sets the vertical offset of the notification
+            I:"[09] Display Offset Vertical"=18
+
+            # Sets the edge/corner of the screen to use as the base location
+            # Valid values:
+            # BOTTOM_RIGHT
+            # BOTTOM
+            # BOTTOM_LEFT
+            # LEFT
+            # TOP_LEFT
+            # TOP
+            # TOP_RIGHT
+            # RIGHT
+            # CENTER
+            S:"[10] Snap Position"=BOTTOM_RIGHT
+
+            # Sets the scaling of item names
+            D:"[11] Name Scale"=0.8
+
+            # Sets the scaling of item icons
+            D:"[12] Icon Scale"=0.8
+
+            # Sets the maximum number of items in the queue before they start fading out artificially
+            I:"[13] Soft Limit"=6
+
+            # Sets the number of items that will be faded out after the soft limit is reached
+            I:"[14] Fade Limit"=3
+
+            # Sets the duration in ticks how long the notification will be displayed
+            I:"[15] Display Duration"=120
+
+            # Sets the duration in ticks how long the notification fades out
+            I:"[16] Fade Duration"=20
+
+            # List of item registry names to ignore when displaying changes
+            # Syntax: modid:item
+            S:"[17] Blacklist: Ignore Item Changes" <
+             >
+
+            # List of item registry names for which to ignore subitem changes
+            # Syntax: modid:item
+            S:"[18] Blacklist: Ignore Subitem Changes" <
+             >
+        }
+
+        "toast control" {
+            # Enables the control of toasts (pop-up text boxes)
+            B:"[1] Toast Control Toggle"=true
+
+            # Determines if advancement toasts are blocked. Enabling will block ALL advancements.
+            B:"[2] Disable Advancement Toasts"=true
+
+            # Determines if recipe unlock toasts are blocked. Blocks "you have unlocked a new recipe" toasts.
+            B:"[3] Disable Recipe Toasts"=true
+
+            # Determines if system toasts are blocked. This is used only for the narrator toggle notification right now.
+            B:"[4] Disable System Toasts"=true
+
+            # Determines if tutorial toasts are blocked. Blocks useless things like use WASD to move.
+            B:"[5] Disable Tutorial Toasts"=true
+        }
+
     }
 
     "tweaks: performance" {
@@ -703,6 +877,15 @@ general {
 
         # Skips initial world chunk loading & garbage collection to speed up world loading
         B:"Fast World Loading"=true
+
+        # Fixes slow background startup edge case caused by checking tooltips during the loading process
+        B:"Faster Background Startup"=true
+
+        # Disables lighting of active redstone, repeaters, and comparators to improve performance
+        B:"No Redstone Lighting"=true
+
+        # Removes the hardcoded 30 FPS limit in screens like the main menu
+        B:"Uncap FPS"=true
     }
 
     "tweaks: world" {
