Zombie pigmen buffs
- aggression range increased
- much higher chance of becoming aggressive when mining a block around them
- slightly increased move speed
- dont piss them off

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -63,6 +63,7 @@ attributes {
         primitivemobs:blazing_juggernaut;generic.knockbackResistance;0;1.0
         nethercraft:bloody_zombie;generic.movementSpeed;1;0.3
         nethercraft:dark_zombie;generic.movementSpeed;1;0.2
+        minecraft:zombie_pigman;generic.movementSpeed;1;0.1
 
         minecraft:zombie;generic.movementSpeed;1;0.3
         
@@ -1019,13 +1020,13 @@ zombie {
     B:"_zombie pigmanFeaturesEnabled"=true
 
     # The range at which zombie pigmen will be aggressive to the player. [range: 0 ~ 32767, default: 10]
-    I:"zombie pigmanAggressionRange"=2
+    I:"zombie pigmanAggressionRange"=3
 
     # Chance (1 in X) that a zombie pigman gets aggressive if the player breaks nearby blocks [range: 0 ~ 32767, default: 10]
-    I:"zombie pigmanAggressiveBlockChance"=10
+    I:"zombie pigmanAggressiveBlockChance"=4
 
     # Block radius in which zombie pigman get aggressive if the player breaks blocks [range: 1.0 ~ 32767.0, default: 20.0]
-    S:"zombie pigmanAggressiveBlockRange"=5.0
+    S:"zombie pigmanAggressiveBlockRange"=7.0
 
     # Set to false to prevent zombie pigman from getting aggressive if the player touches its hitbox [default: false]
     B:"zombie pigmanAggressiveTouch"=true
