fix some baubles not existing anymore

--- a/config/RLArtifacts.cfg
+++ b/config/RLArtifacts.cfg
@@ -67,7 +67,7 @@ general {
     D:"Pocket Piston Knockback Multiplier"=2.0
 
     # Registers baubles from the original Artifacts that overlap with BountifulBaubles (Cobalt Shield, Lucky Horseshoe, etc)
-    B:"Register Legacy Items"=false
+    B:"Register Legacy Items"=true
 
     # Should the current charge of the Sacrificial Amulet be visible in the tooltip.
     B:"Sacrifical Amulet Charge Visibility"=true
