Combat changes and fixes
- Fixed all weapons and tools having insane attack speed. They should now reflect their proper attack speed
- Attacking now requires full energy, ie you have to wait the full attack cooldown now
- lowered the attack aoe radius
- missing an attack on a mob will now cause a cooldown for that weapon

--- a/config/bettercombatmod.cfg
+++ b/config/bettercombatmod.cfg
@@ -13,7 +13,7 @@ general {
     B:"Attack and Sprint"=true
 
     # You may only attack if your energy is full [default: false]
-    B:"Attacks require full energy"=false
+    B:"Attacks require full energy"=true
 
     # Enables the capability to attack with your off-hand [default: true]
     B:"Enable Offhand Attacks"=true
@@ -54,7 +54,7 @@ general {
     B:"Random Crits"=true
 
     # Melee attacks that don't hit the target won't cause cooldown [default: true]
-    B:"Refound energy on miss"=true
+    B:"Refound energy on miss"=false
 
     # Attacks with the Off-hand does 50% less damage [default: true]
     B:"Weaker Left Arm"=true
@@ -63,7 +63,7 @@ general {
     B:"Wider Attack"=true
 
     # How much bigger the hitbox will be extended for wider attacks. Vanilla is 0.5 [range: 0.0 ~ 64.0, default: 1.5]
-    S:"Wider Attack Width"=1.5
+    S:"Wider Attack Width"=1.3
 }
 
 
