Fix timer bonus count not being reset

--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -37,13 +37,8 @@ reroll {
         ctrlkill all 5
         ctrlkill all 10
         ctrlkill all 0
-        scoreboard objectives remove timerbonus1
-        scoreboard objectives remove timerbonus2
-        scoreboard objectives remove newtimer
-        scoreboard objectives add timerbonus1 dummy
-        scoreboard objectives add timerbonus2 dummy
-        scoreboard players set Fake_Player timerbonus2 2
-        scoreboard objectives add newtimer dummy
+        scoreboard objectives remove timerbonus
+        scoreboard objectives add timerbonus dummy
         timer @p add 100
      >
 
