The Veils of The Nether Update, pt 1
Added Pillar, ChatFlow (dev tools)

- Added the first draft for Nether boss arena structure
- Added The Scepter of Infernal Conjuring
- Renamed Pyridium -> Infernium and Neridium -> Veilstrium to more lore fitting names and changed all related textures
- Added many lore descriptions and tooltips
- Added some special events that occur during certain actions
- Improved the texture of the arrows in the skill book
- Glowood trees are now explosion proof
- Modified tooltip design a bit
- Added new info icon texture
- Changed recipes and progression a bit (swapped blaze rods and ghast rods in neridium/pyridium recipes)
- Removed veilstrium (neridium) bow, replaced with quartz bow
- Infernium (pyridium) weapons now have flame based enchants on them
- Nether mods no longer can spawn with veilstrium (neridium) picks and instead spawn with netherrack picks/swords

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -25,19 +25,19 @@ visual_options {
     B:borders_match_rarity=false
 
     # Whether item names in tooltips should have a line under them separating them from the rest of the tooltip. [default: true]
-    B:name_separator=false
+    B:name_separator=true
 
     # If enabled, items showing a custom border will have a special shine effect when hovered over. [default: true]
     B:shine_effect=true
 
     # Whether or not to repeat the shine effect, or to only play it once. [default: false]
-    B:shine_repeat=false
+    B:shine_repeat=true
 
     # Whether or not to sync horizontal and vertical shine, or delay vertical shine. [default: false]
-    B:shine_sync=false
+    B:shine_sync=true
 
     # The speed at which to play the shine effect, higher value is slower. [range: 20 ~ 800, default: 50]
-    I:shine_ticks=50
+    I:shine_ticks=100
 
     # If enabled, tooltips will display a drop shadow. [default: true]
     B:tooltip_shadow=true
@@ -66,6 +66,7 @@ definitions {
         enderskills:token
         enderskills:book
         %Heart Container
+        contenttweaker:infernal_fortress_scepter
      >
 
     #  [default: ]
