--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -1166,8 +1166,9 @@ zombieequipment {
     S:zombieEquipmentMainhand <
       nethercraft:glowood_sword;7;-1
       nethercraft:neridium_sword;3;-1
+      nethercraft:netherrack_sword;3;-1
       nethercraft:glowood_pickaxe;5;-1
-      nethercraft:neridium_pickaxe;2;-1
+      nethercraft:netherrack_pickaxe;2;-1
       minecraft:diamond_pickaxe;2;10
       minecraft:diamond_sword;3;10
      >
@@ -1176,8 +1177,9 @@ zombieequipment {
     S:zombieEquipmentOffhand <
       nethercraft:glowood_sword;7;-1
       nethercraft:neridium_sword;3;-1
+      nethercraft:netherrack_sword;3;-1
       nethercraft:glowood_pickaxe;5;-1
-      nethercraft:neridium_pickaxe;2;-1
+      nethercraft:netherrack_pickaxe;2;-1
       minecraft:diamond_pickaxe;2;10
       minecraft:diamond_sword;3;10
      >
