The Veils of The Nether Update, pt 2
- Added ZenUtils, reloading for event scripts
- Added PotionCore, Potion of Aiming, and Potion Descriptions
- Added Mystic Staffs

- Added set bonuses for Veilstrium armor and swords
- Fixed up boss structure summoning
- Fixed all animations being broken
- Added foulite to nether chests
- Updated Wither model
- Added Staff of Inferno (obtainable next likely next commit) and Staff of Veilheart
- Added lots more lore tooltips and descriptions
- Changed Veilstrium lighter to Quartz lighter
- Infernium now glows

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -71,6 +71,9 @@ definitions {
 
     #  [default: ]
     S:level1_entries <
+        contenttweaker:vitality_orb
+        mysticstaffs:fire_staff
+        mysticstaffs:heal_staff
         %Alpha
         @nethercraft
         %Nether
@@ -93,6 +96,9 @@ definitions {
 
     #  [default: ]
     S:level2_entries <
+        mysticstaffs:sunstrike_staff
+        mysticstaffs:glow_staff
+        mysticstaffs:invisibility_staff
         %Beta
         @erebus
         %Copper
@@ -101,6 +107,9 @@ definitions {
 
     #  [default: ]
     S:level3_entries <
+        mystic_staffs:wind_staff
+        mystic_staffs:path_staff
+        mystic_staffs:ice_ball_staff
         %Gamma
         %Deep Stone
         %Diamond
@@ -109,6 +118,8 @@ definitions {
 
     #  [default: ]
     S:level4_entries <
+        mystic_staffs:flight_staff
+        mystic_staffs:solar_beam_staff
         %Delta
         @srparasites
         minecraft:stone
