--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -450,10 +450,10 @@ hostilehorse {
 
 "magma cube" {
     # Set to false to disable ALL magma cube features [default: true]
-    B:"_magma cubeFeaturesEnabled"=true
+    B:"_magma cubeFeaturesEnabled"=false
 
     # Set to false to prevent small magma cubes from dropping lava on death [default: true]
-    B:"magma cubeDropLava"=true
+    B:"magma cubeDropLava"=false
 
     # Entities which count as magma cube entities [default: [minecraft:magma_cube]]
     S:"magma cubeEntities" <
