--- a/config/setbonus/1.12.2.009+.cfg
+++ b/config/setbonus/1.12.2.009+.cfg
@@ -30,6 +30,13 @@ general {
             DiamondLeggings, minecraft:diamond_leggings
             DiamondChest, minecraft:diamond_chestplate
             DiamondBoots, minecraft:diamond_boots
+            
+            VeilHelm, nethercraft:neridium_helmet
+            VeilLeggings, nethercraft:neridium_leggings
+            VeilChest, nethercraft:neridium_chestplate
+            VeilBoots, nethercraft:neridium_boots
+            
+            VeilSword, nethercraft:neridium_sword
          >
 
         # FILLSCREEN Each equipment set is defined here
@@ -50,6 +57,10 @@ general {
         #  
         S:"2. Equipment Sets" <
             FullDiamondArmor, Light In The Dark, head = DiamondHelm, chest = DiamondChest, legs = DiamondLeggings, feet = DiamondBoots
+            
+            FullVeilArmor, Supernatural Resilience, head = VeilHelm, chest = VeilChest, legs = VeilLeggings, feet = VeilBoots
+            
+            VeilSwords, Pierce the Veil, mainhand = VeilSword, offhand = VeilSword
          >
 
         # FILLSCREEN Each bonus is defined here
@@ -73,6 +84,10 @@ general {
         #  
         S:"2f. Bonuses" <
             FullDiamondArmorBonus, [Night Vision(30s) every 60s], 1, FullDiamondArmor
+            
+            FullVeilArmorBonus, [Cure all effects every 30s], 1, FullVeilArmor
+            
+            VeilSwordsBonus, [+1 Attack Dmg], 1, VeilSwords
          >
 
         # FILLSCREEN Attribute modifiers you receive as part of a bonus
@@ -86,6 +101,7 @@ general {
         # DualWieldSnD, generic.attackDamage = 0.5 @ 1
         #  
         S:"3. Attribute Modifiers" <
+            VeilSwordsBonus, generic.attackDamage = 1 @ 0
          >
 
         # FILLSCREEN Constant potion effects received as part of a bonus
@@ -103,6 +119,8 @@ general {
         #  
         S:"4. Potion Effects" <
             FullDiamondArmorBonus, minecraft:night_vision.1.600.1200
+            
+            FullVeilArmorBonus, potioncore:cure.1.20.600
          >
     }
 
